[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "radiology_ai"
version = "0.1.0"
description = "An image classification project that classify the Chest XRay image into COVID, Pneumonia, or a healthy lung (i.e., no diseases found)."
authors = [{ name = "Vicente Aguilera", email = "vicente.aguilerae@gmail.com" }]
license = { text = "MIT" }

[tool.dependencies]
tensorflow = "^2.12.0"
scikit-learn = "^1.3.0"
numpy = "^1.24.0"

[tool.setuptools]
packages = ["src"]

[tool.scripts]
main = "src.main:main"
